# claude-code-20260611

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md
.claude/: settings.json
.claude/skills/glossary-add/: SKILL.md
_mcps/: README.md  setup.sh
_mcps/academic-search/: README.md
_mcps/arxiv/: .mcp.json.example  README.md  from-prompt-to-process.md  server.py
_mcps/gemini-vision/: server.py
_mcps/harvard-art-museums-mcp/: README.md
_mcps/harvard-art-museums-mcp/docs/: README.md
_mcps/harvard-art-museums-mcp/src/: types.ts
_mcps/replicate-image/: server.py  setup.sh
examples/admin-email-drafter/: CLAUDE.md  summary.md
examples/admin-email-drafter/outputs/: chemistry-concentration-requirements-reply.md  chemistry-secondary-field-reply.md
examples/handout-formatting/: CLAUDE.md  index.md  summary.md
examples/handout-formatting/outputs/: ACCESSIBILITY.md
mcps-apis/: README.md  setup.sh
mcps-apis/academic-search/: .env.example  README.md  how-to-build-an-mcp.md  server.py  setup.sh
mcps-apis/arxiv/: ARXIV_API.md  pyproject.toml
mcps-apis/gemini-vision/: .gitignore  README.md
mcps-apis/harvard-art-museums-mcp/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
mcps-apis/hollis-connections/: .env.example  README.md  getting-an-api-key.md  primo_search.py
mcps-apis/replicate-image/: README.md  _smoke_test.py  how-to-build-an-mcp.md  requirements.txt
resources/day-1-recap/: day-1-top-tips.md
resources/day-2-recap/: 20260609-transcript.md
resources/day-3-recap/: 20260610-transcript.md
(+699 files in other folders)
