[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "An MCP server that wraps the arXiv API for searching and retrieving e-print metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
]

[project.scripts]
arxiv-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
